--- a/app/views/articles/_listarticle.html.erb
+++ b/app/views/articles/_listarticle.html.erb
@@ -3,7 +3,7 @@
         <%= will_paginate %>
     </div>
     </div>
-    <%= render 'article', obj: obj %>
+    <%= render 'articleindex', obj: obj %>
     <div align="center">
         <%= will_paginate %>
     </div>
