--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,9 @@
-<% provide(:titulo, "Articles") %>
+<% provide(:titulo, "Skills") %>
 
 <div class='row'>
     <div class="well cv col-xs-8 col-offset-2">
         <div class='col-xs-12'>
-            <h1 align='center'>Listing all articles</h1>
+            <h1 align='center'>Listing all Skills</h1>
             <%= form_tag articles_path, :method => 'get', :id => "articles_search" do %>
               <div class="col-xs-8 col-xs-offset-2">
                   <div class="well-lg article">
