articles list update

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -5,7 +5,7 @@
                 <div class="article-title">
                     <%= link_to course.title, article_path(course)  %>
                 </div>
-                <div>
+                <div class="article-body">
                     <%= course.description %>
                 </div>
             </div>
