--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,14 +1,18 @@
-<% provide(:titulo, "My Blog") %>
+<% provide(:titulo, "Home") %>
 
 
 
     <div class="row">
         <div class="jumbotron home col-xs-8 col-offset-2">
-            <div class='col-xs-8'>
-            </div>
-            <div class='col-xs-12 center'>
-              <h1 class="display-4">Welcome!</h1>
+            <div>
+              <h1 class="display-4">CVs list</h1>
               <p>Welcome to this page, log in, sign up or check other users CV! </p>
+              <p>Search for specific users or for their skills and see their CVs </p>
+              <br>
+              <p>You can find all the information uploaded in the dropdown menu showed when a user is selected. </p>
+              <br>
+              <p>It is just a pilot project developed with Ruby and Ruby on Rails. </p>
+              <p>If you want to contact me, you can find the link in the right footer. </p>
             </div>
         </div>
     </div>
