--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <%= link_to "My Blog", root_path, class:"navbar-brand", id:"logo"%>
+  <%= link_to "Home", root_path, class:"navbar-brand", id:"logo"%>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -25,7 +25,7 @@
           </li>
       <%end%>
       <li class="nav-item">
-        <%= link_to "Articles", articles_path, class:"nav-link"%>
+        <%= link_to "Skills", articles_path, class:"nav-link"%>
       </li>
     </ul>
     <ul class="navbar-nav mr-auto navbar-right">
@@ -69,6 +69,7 @@
           </li>
       <% end %>
     </ul>
+    <%if !true%>
     <%= form_tag users_search_path, remote: true, method: :get, id: "users_search-form" do %>
       <div class="form-inline my-2 my-lg-0">
         <%= text_field_tag :search_param, params[:search_param], 
@@ -79,5 +80,6 @@
           </i> Search
         <% end %>
       </div>
+    <% end %>
     <% end %>
 </nav>
