--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -21,6 +21,8 @@
               <%= link_to "About me", user_about_path(@seluser.id), class:"nav-link"%>
               <div class="divider"></div>
               <%= link_to "CV", user_profile_path(@seluser.id), class:"nav-link"%>
+              <div class="divider"></div>
+              <%= link_to "Contact me", user_contactme_path(@seluser.id), class:"nav-link"%>
             </ul>
           </li>
       <%end%>
