--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <%= yield %>
       </div>
       <%= render 'layouts/footer' %>
+      <%= debug(current_user) if Rails.env.development? %>
       <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
