--- a/app/views/users/contactme.html.erb
+++ b/app/views/users/contactme.html.erb
@@ -1,7 +1,7 @@
 <% provide(:titulo, "Contact me") %>
 <h1 align="center">Contact me</h1>
 
-<%= render 'form'%>
+<%= render 'messages/form'%>
 <%if !true%>
 <div class="row">
     <div class='col-xs-12'>
