--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -21,6 +21,14 @@
           </div>
           <div class="form-group row">
             <div class="col-sm-2 col-form-label">
+                <label for="phone">Phone</label>
+            </div>
+            <div class="col-sm-8 col-form-label">
+                <%= f.text_field :phone, class:"form-control", id:"phone", placeholder:"Enter phone", autofocus: true  %>
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="col-sm-2 col-form-label">
                 <label for="password">Password</label>
             </div>
             <div class="col-sm-8 col-form-label">
