--- a/app/views/users/contactme.html.erb
+++ b/app/views/users/contactme.html.erb
@@ -4,6 +4,7 @@
 <% if @seluser.phone %>
 <br>
 <h2 align="center">Call me</h2>
+<hr>
 <div class="row">
         <div class='col-xs-12'>
           <div class="form-group row">
@@ -19,47 +20,19 @@
 <%end%>
 <br>
 <h2 align="center">Write an email</h2>
-          
-<%= render 'messages/form'%>
-<%if !true%>
+<hr>
 <div class="row">
-    <div class='col-xs-12'>
-        <%= form_for @message, url: create_message_url do |f| %>
-          <div class="form-group row">
-            <div class="col-sm-2 col-form-label">
-                <label for="name">Name</label>
-            </div>
-            <div class="col-sm-8 col-form-label">
-                <%= f.text_field :name, placeholder: 'name', class:"form-control" %>
-            </div>
-          </div>
+        <div class='col-xs-12'>
           <div class="form-group row">
             <div class="col-sm-2 col-form-label">
                 <label for="email">Email</label>
             </div>
             <div class="col-sm-8 col-form-label">
-                <%= f.email_field :email, placeholder: 'email', class:"form-control" %>
+                <%= @seluser.email  %>
             </div>
           </div>
-          <div class="form-group row">
-            <div class="col-sm-2 col-form-label">
-                <label for="body">Body</label>
-            </div>
-            <div class="col-sm-8 col-form-label">
-                <%= f.text_area :body, placeholder: 'body', class:"form-control" %>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                  <%= f.submit('Send', class:"btn btn-primary") %>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <%= link_to "Cancel request and return to home page", root_path %>
-            </div>
-          </div>
-        <% end %>
     </div>
 </div>
+<%if !true%>   
+<%= render 'messages/form'%>
 <%end%>
