--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,1 +1,6 @@
+<% if logged_in? and current_user.admin? %>
 <span class="badge"><%= link_to category.name, category_path(category) %>  </span>
+<%else%>
+
+<div class="article-body"><%=category.name%></div>
+<%end%>
