--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,10 +5,12 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContentfooter">
     <ul class="footer navbar-nav mr-auto">
+      <%if !true%>
       <%if logged_in? %>
       <li class="nav-item navbar-right">
         <%= link_to 'Contact me', new_message_path, class:"footer-link" %>
       </li>
+      <% end %>
       <% end %>
     </ul>
   </div>
