--- a/app/views/users/welcome.html.erb
+++ b/app/views/users/welcome.html.erb
@@ -6,8 +6,8 @@
     <div class="row">
         <div class="jumbotron home col-xs-8 col-offset-2">
             <div class='col-xs-8 '>
-                <% if obj.image %>
-                   <%= image_tag(@seluser.image.picture.url, width: "auto", height: "300") if @seluser.image.picture? %>
+                <% if @seluser.image %>
+                   <%= image_tag(@seluser.image.picture.url, width: "100%", height: "auto") if @seluser.image.picture? %>
                 <% end %>
             </div>
             <div class='col-xs-12 center'>
