--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -14,8 +14,9 @@
                 <div class="col-sm-2 col-form-label">
                     <label for="name">To</label>
                 </div>
+                <%= debug(ENV['SENDGRID_MAIL_USERNAME']) if Rails.env.development? %>
                 <div class="col-sm-8 col-form-label">
-                    <%= f.text_field :to, value: current_user.email, placeholder: 'name', class:"form-control" %>
+                    <%= f.text_field :to, placeholder: 'name', class:"form-control" %>
                 </div>
             <%end%>
           </div>
