--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,20 +10,18 @@
         <%= link_to "Users", users_path, class:"nav-link"%>
       </li>
       <%if @seluser %>
-            <li class="dropdown" style="list-style-type:none">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              User <%= @seluser.username %>
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenu3">
+             <li class="nav-item">
               <%= link_to "Welcome user", user_welcome_path(@seluser.id), class:"nav-link"%>
-              <div class="divider"></div>  
+               </li>
+               <li class="nav-item"> 
               <%= link_to "About me", user_about_path(@seluser.id), class:"nav-link"%>
-              <div class="divider"></div>
+               </li>
+               <li class="nav-item">
               <%= link_to "CV", user_profile_path(@seluser.id), class:"nav-link"%>
-              <div class="divider"></div>
+               </li>
+               <li class="nav-item">
               <%= link_to "Contact me", user_contactme_path(@seluser.id), class:"nav-link"%>
-            </ul>
+            
           </li>
       <%end%>
       <li class="nav-item">
