--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -7,7 +7,7 @@
                     <label for="name">To</label>
                 </div>
                 <div class="col-sm-8 col-form-label">
-                    <%= f.text_field :to, value: @seluser.email, placeholder: 'name', class:"form-control" %>
+                    <%= f.text_field :to, value: @seluser.email, placeholder: 'name', readonly: true, class:"form-control" %>
                 </div>
             <%else%>
               <div class="form-group row">
@@ -15,7 +15,7 @@
                     <label for="name">To</label>
                 </div>
                 <div class="col-sm-8 col-form-label">
-                    <%= f.text_field :to, placeholder: 'name', class:"form-control" %>
+                    <% f.text_field :to, placeholder: 'name', readonly: true, class:"form-control" %>
                 </div>
             <%end%>
           </div>
@@ -40,7 +40,7 @@
                 <label for="body">Body</label>
             </div>
             <div class="col-sm-8 col-form-label">
-                <%= f.text_area :body, placeholder: 'body', class:"form-control" %>
+                <%= f.text_area :body, placeholder: 'body', class:"form-control", rows: "10" %>
             </div>
           </div>
           <div class="form-group">
@@ -48,11 +48,19 @@
                   <%= f.submit('Send', class:"btn btn-primary") %>
             </div>
           </div>
+          <% if @seluser %>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <%= link_to "Cancel request and return to home page", user_welcome_path(@seluser.id) %>
+            </div>
+          </div>
+          <%else%>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <%= link_to "Cancel request and return to home page", root_path %>
             </div>
           </div>
+          <%end%>
         <% end %>
     </div>
 </div>
