--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -12,7 +12,7 @@
               <p>You can find all the information uploaded in the dropdown menu showed when a user is selected. </p>
               <br>
               <p>It is just a pilot project developed with Ruby and Ruby on Rails. </p>
-              <p>If you want to contact me, you can find the link in the right footer. </p>
+              <p>If you want to contact me, select my user and there will appear the link to send me an email. </p>
             </div>
         </div>
     </div>
