--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -24,10 +24,10 @@
           </div>
           <div class="form-group row">
             <div class="col-sm-2 col-form-label">
-                <label for="body">Body</label>
+                <label for="content">Body</label>
             </div>
             <div class="col-sm-8 col-form-label">
-                <%= f.text_area :body, placeholder: 'body', class:"form-control" %>
+                <%= f.text_area :content, placeholder: 'content', class:"form-control" %>
             </div>
           </div>
           <div class="form-group">
